fixed sizing issue with movie covers

--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -60,6 +60,7 @@ body, .container, .main {
     height: 70%;
     width: 70%; 
     padding-bottom: 20%;
+    
 }
 
 .purchasedFilms {
@@ -101,49 +102,79 @@ body, .container, .main {
     margin: 1%;
     border-radius: 25%;
     border: 1px solid #B78841;
+    /*prevent images from getting **really** big on PC screens*/
+    max-height: 180px;
+    max-width: 145px;
   }
   
 
-  @media (min-width: 600px) {
-    /* .container{ 
-
-        grid-template-columns: 2fr;
-        grid-template-rows: .5fr 1fr .5fr;
-        grid-template-areas: 
-            "nav"
-            "main"
-            "footer"
-        ;
-    
-   
-    } */
+  @media (min-width: 450px) {
     
 .main{
     display:grid;
     grid-template-columns:repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    /* grid-template-areas: 
-    "discover logo logo"
-    "purchased purchased purchased"; */
+    grid-template-rows: repeat(12, 1fr);
 }
 
 .logoBox{
-    grid-column: 3 / 9;
-    grid-row: 1 / 3;
+    grid-column: 4 / 11;
+    grid-row: 1 / 7;
 }
 
 .discoverFilmsBox{
-    grid-column: 1 / 7;
-    grid-row: 2/ 5;
+    grid-column: 1 / 6;
+    grid-row: 6/ 11;
 }
 .purchasedFilms{
-    grid-column: 6/13;
-    grid-row: 4 / 6;
+    grid-column: 7/13;
+    grid-row: 9 / 13;
+    max-height: 230px;
 }
+
+
+/* .footer{
+    grid-row: 5 / 6;
+    grid-column: 1/10;
+
+} */
+/* .slider > img {
+  
+    flex-shrink: 0;
+    width: 20%;
+    height: 40%;
+    border-radius: 25%;
+    border: 1px solid #B78841; 
+  } */
+    
+  }
+
+  @media (min-width: 900px){
+       
+.main{
+    display:grid;
+    grid-template-columns:repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+}
+
+.logoBox{
+    grid-column: 4 / 9;
+    grid-row: 1 / 7;
+}
+
+.discoverFilmsBox{
+    grid-column: 3 / 6;
+    grid-row: 6/ 13;
+}
+.purchasedFilms{
+    grid-column: 5/13;
+    grid-row: 10 / 13;
+    max-height: 230px;
+}
+
+/* 
 .footer{
     grid-row: 5 / 6;
-    grid-column: 1/12;
+    grid-column: 1/10;
 
-}
-    
+} */
   }
